[package]
name = "brainfsck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.7"
custom_error = "1.9.2"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys-160 = { package = "llvm-sys", version = "160.0.8", features = ["prefer-static"] }
path-clean = "1.0.1"
tempfile = "3.8.0"
